# coco-bot

./: README.md
coco_bringup/: CMakeLists.txt  README.md  package.xml
coco_bringup/config/: coco_nav2_params.yaml  controllers.yaml
coco_bringup/launch/: coco.launch.py  coco_simulation.launch.py  navigation.launch.py
coco_bringup/maps/: fincav1.pgm  mapa_studio.pgm
coco_bringup/navigation/: fincav1.yaml  mapa_studio.pgm  mapa_studio.yaml
coco_bringup/worlds/: empty_world.sdf
coco_description/: CMakeLists.txt  README.md  model.config  package.xml
coco_description/launch/: coco_description.launch.py  controller.launch  controller.yaml  display.launch  gazebo.launch  spawn.launch.py
coco_description/meshes/: _front_link_1.stl  _front_link_lp.stl  base_link.stl  base_link_lp.stl  camera_link_1.stl  camera_link_lp.stl  head_link_1.stl  head_link_lp.stl  laser_link_1.stl  laser_link_lp.stl  lb_coax_link_1.stl  lb_coax_link_lp.stl  lb_femur_link_1.stl  lb_femur_link_lp.stl  lb_tibia_link_1.stl  lb_tibia_link_lp.stl  lf_coax_link_1.stl  lf_coax_link_lp.stl  lf_femur_link_1.stl  lf_femur_link_lp.stl  lf_tibia_link_1.stl  lf_tibia_link_lp.stl  rb_coax_link_1.stl  rb_coax_link_lp.stl  rb_femur_link_1.stl  rb_femur_link_lp.stl  rb_tibia_link_1.stl  rb_tibia_link_lp.stl  rear_link_1.stl  rear_link_lp.stl  rf_coax_link_1.stl  rf_coax_link_lp.stl  rf_femur_link_1.stl  rf_femur_link_lp.stl  rf_tibia_link_1.stl  rf_tibia_link_lp.stl
coco_description/urdf/: coco.gazebo  coco.gazebo.xacro  coco.ros2_control.xacro  coco.rviz  coco.simulation.xacro  coco.trans  coco.xacro  materials.xacro
coco_hardware/: CMakeLists.txt  README.md  coco_hardware.xml  package.xml
coco_hardware/config/: controllers.yaml  controllers_spawner.yaml
coco_hardware/include/coco_hardware/: pca9685_comm.h  pca9685_system.hpp  visibility_control.h
coco_hardware/launch/: coco_hardware.launch.py
coco_hardware/src/: I2CPeripheral.cpp  pca9685_comm.cpp  pca9685_system.cpp  pca9865_system.cpp
coco_mov_control/: CMakeLists.txt  README.md  coco_ik.py  package.xml
coco_mov_control/include/coco_mov_control/: gait_planifier.hpp
coco_mov_control/src/: gait_planifier_main.cpp
coco_mov_control/src/coco_mov_control/: gait_planifier.cpp
