<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>coco_bringup</name>
  <version>0.0.0</version>
  <description>Launch files and configuration for COCO robot</description>

  <maintainer email="justodariovalverde@gmail.com">Justo Dario</maintainer>
  <author email="justodariovalverde@gmail.com">JustoDario</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>coco_description</depend>
  <depend>coco_hardware</depend>
  <depend>coco_mov_control</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
