<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>coco_hardware</name>
  <version>0.0.0</version>
  <description>Package to control the pca9865 and therefore coco joints</description>

  <maintainer email="justodariovalverde@gmail.com">Justo Dario</maintainer>
  <author email="justodariovalverde@gmail.com">JustoDario</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
